hphp/hack/test/typecheck/references/refs_in_array/binding_new_element1.php
<?hh // strict

function test(): void {
  $y = 42;
  $x = array();
  $x[] = &$y;
}
